crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_config_empty_json.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: config
---
DatasetConfig {
    defaults: DatasetDefaults {
        model: None,
        concurrency: None,
        max_findings: None,
        roles: None,
    },
}
