crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_config_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "defaults": {
    "model": "gpt-4o",
    "concurrency": 5,
    "max_findings": 10,
    "roles": "FE,BE"
  }
}
