crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_defaults_default.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: defaults
---
DatasetDefaults {
    model: None,
    concurrency: None,
    max_findings: None,
    roles: None,
}
