crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_defaults_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "model": "claude-3-opus",
  "concurrency": 3,
  "max_findings": 20,
  "roles": "SEC"
}
