crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_info_default_config.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: info
---
DatasetInfo {
    id: "ds1",
    path: "/data/ds1",
    pr_count: 50,
    config: None,
}
