crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_info_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "id": "benchmark-v2",
  "path": "/data/datasets/benchmark-v2",
  "pr_count": 150,
  "config": null
}
