crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__dataset_info_with_config.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "id": "test-set",
  "path": "/tmp/datasets/test",
  "pr_count": 10,
  "config": {
    "defaults": {
      "model": "gpt-4",
      "concurrency": null,
      "max_findings": null,
      "roles": null
    }
  }
}
