crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__pr_entry_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "key": "owner/repo/pull/42",
  "url": "https://github.com/owner/repo/pull/42",
  "title": "Add CI pipeline",
  "repo": "owner/repo",
  "pr_number": 42
}
