crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__reasoning_efforts_response_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "levels": [
    "low",
    "medium",
    "high"
  ]
}
