crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__role_info_default_incompatible.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: role
---
RoleInfo {
    name: "Frontend",
    abbreviation: "FE",
    incompatible_with_roles: [],
}
