crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__role_info_display_name.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: role.display_name()
---
"Backend Engineer (BE)"
