crates/crb-webui-shared/src/snapshots/crb_webui_shared__config__tests__role_info_serde_roundtrip.snap
---
source: crates/crb-webui-shared/src/config.rs
expression: "&orig"
---
{
  "name": "Frontend Engineer",
  "abbreviation": "FE",
  "incompatible_with_roles": []
}
